[workspace]
members = [
    "bench",
    "client",
    "common",
    "exhauster",
    "proc",
    "proto",
    "rudder",
    "storage",
    "tests",
    "wheel",
]

[profile.bench]
# Uncomment this line if you are generating flame graph.
debug = true

[profile.release]
# Uncomment this line if you are generating flame graph.
debug = true
