[package]
name = "runkv-bench"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
bytesize = "1.1.0"
clap = { version = "3.1.6", features = ["derive"] }
env_logger = "*"
futures = "0.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
rand = "0.8.5"
runkv-client = { path = "../client" }
runkv-common = { path = "../common" }
runkv-exhauster = { path = "../exhauster" }
runkv-proto = { path = "../proto" }
runkv-rudder = { path = "../rudder" }
runkv-storage = { path = "../storage" }
runkv-tests = { path = "../tests" }
runkv-wheel = { path = "../wheel" }
tempfile = "3"
test-log = "0.2.10"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "tracing",
] }
toml = "0.4.2"
tonic = "0.6.2"
tracing = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4.3"

[features]
tracing = ["runkv-wheel/tracing"]
deadlock = [
    "runkv-tests/deadlock",
    "runkv-storage/deadlock",
    "runkv-wheel/deadlock",
]
console = ["tokio/tracing", "runkv-common/console"]
trace-notify-pool = ["runkv-common/trace-notify-pool"]
verbose-release-log = [
    "tracing/release_max_level_trace",
    "runkv-common/verbose-release-log",
    "runkv-exhauster/verbose-release-log",
    "runkv-rudder/verbose-release-log",
    "runkv-storage/verbose-release-log",
    "runkv-tests/verbose-release-log",
    "runkv-wheel/verbose-release-log",
]

[[bin]]
name = "bench_kv"
path = "bench_kv/main.rs"
