[package]
name = "runkv-common"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
bytesize = { version = "1.1.0", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
itertools = "0.10.3"
parking_lot = "0.12"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["sync"] }
toml = "0.4.2"
tonic = "0.6.2"

[dev-dependencies]
env_logger = "*"
test-log = "0.2.10"
