[package]
name = "runkv-common"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
bytesize = { version = "1.1.0", features = ["serde"] }
chrono = "0.4"
clap = { version = "3.1.6", features = ["derive"] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
isahc = "1" # isahc is the http client used for tracing. Always set it as the same version as opentelemetry-jaeger's.
itertools = "0.10.3"
lazy_static = "1.4.0"
opentelemetry = { version = "0.17", features = ["rt-tokio", "trace"] }
opentelemetry-jaeger = { version = "0.16", features = [
    "rt-tokio",
    "collector_client",
    "isahc",
    "isahc_collector_client",
] }
parking_lot = "0.12"
serde = "1.0"
serde_derive = "1.0"
slog = "2.7"
tokio = { version = "1", features = ["sync"] }
toml = "0.4.2"
tonic = "0.6.2"
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = "0.3"

[dev-dependencies]
env_logger = "*"
test-log = "0.2.10"
