[package]
name = "runkv-proc"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[features]
trace_lock = []

[lib]
proc-macro = true
