[package]
name = "runkv-proto"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
prost = "0.9"
runkv-common = { path = "../common" }
serde = "1.0"
serde_derive = "1.0"
tonic = "0.6.2"

[build-dependencies]
prost-build = "0.9"
tonic-build = "0.6.2"
