[package]
name = "runkv-storage"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-recursion = "1.0.0"
async-trait = "0.1"
aws-config = "0.8"
aws-endpoint = "0.8"
aws-sdk-s3 = "0.8"
aws-smithy-http = "0.38"
aws-smithy-types = "0.38"
aws-types = { version = "0.8", features = ["hardcoded-credentials"] }
bytes = "1"
bytesize = "1.1.0"
crc32fast = "1.3.2"
farmhash = "1.1.5"
futures = "0.3"
itertools = "0.10.3"
lz4 = "1.23.1"
moka = { version = "0.7", features = ["future"] }
parking_lot = "0.12"
rand = "0.8.5"
runkv-proto = { path = "../proto" }
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
] }
tracing = "0.1"
