[package]
name = "runkv-storage"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-recursion = "1.0.0"
async-stream = "0.3.3"
async-trait = "0.1"
aws-config = "0.8"
aws-endpoint = "0.8"
aws-sdk-s3 = "0.8"
aws-smithy-http = "0.38"
aws-smithy-types = "0.38"
aws-types = { version = "0.8", features = ["hardcoded-credentials"] }
bitvec = "1"
bytes = "1"
bytesize = "1.1.0"
clap = { version = "3.1.6", features = ["derive"] }
crc32fast = "1.3.2"
farmhash = "1.1.5"
futures = "0.3"
futures-async-stream = "0.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
libc = "0.2"
lz4 = "1.23.1"
moka = { version = "0.7", features = ["future"] }
nix = { version = "0.24.1", features = ["fs", "aio", "uio"] }
parking_lot = "0.12"
prometheus = "0.13.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
runkv-common = { path = "../common" }
runkv-proto = { path = "../proto" }
serde = "1.0"
serde_derive = "1.0"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "fs",
] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["async", "async_tokio"] }
env_logger = "*"
test-log = "0.2.10"

[features]
deadlock = []

[[bench]]
name = "bench_block_iter"
harness = false
# Uncomment this line if you are generating flame graph.
# debug = true

[[bin]]
name = "bench_raft_log_store"
path = "bench/bench_raft_log_store.rs"
# Uncomment this line if you are generating flame graph.
# debug = true
