[package]
name = "tests"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integrations"
path = "integrations/mod.rs"

[dependencies]
anyhow = "1.0"
bytes = "1"
bytesize = "1.1.0"
futures = "0.3"
itertools = "0.10.3"
rand = "0.8.5"
runkv-rudder = { path = "../rudder" }
runkv-storage = { path = "../storage" }
runkv-wheel = { path = "../wheel" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
] }
toml = "0.4.2"
tracing = "0.1"
