[package]
name = "runkv-wheel"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3.3"
bytes = "1"
bytesize = { version = "1.1.0", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3"
humantime = "2.1.0"
humantime-serde = "1.1.1"
itertools = "0.10.3"
moka = { version = "0.7", features = ["future"] }
openraft = { git = "https://github.com/datafuselabs/openraft", rev = "ca8a09c1898dbcaa4c2bf49bf5dabc5221e0b908" }
parking_lot = "0.12"
prost = "0.9"
raft = { git = "https://github.com/mrcroxx/raft-rs", rev = "f44c57464e9939c66f5e1bcb6913e9be28213689" }
# Uncomment this line if you want to debug raft-rs locally.
# raft = { path = "../../raft-rs" }
rand = "0.8.5"
runkv-common = { path = "../common" }
runkv-proto = { path = "../proto" }
runkv-storage = { path = "../storage" }
serde = "1.0"
serde_derive = "1.0"
slog = "2.7" # Required by "raft".
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
] }
toml = "0.4.2"
tonic = "0.6.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_matches = "1.5.0"
env_logger = "*"
test-log = "0.2.10"
